--- a/recsys_items/requirements.txt
+++ b/recsys_items/requirements.txt
@@ -1,6 +1,6 @@
-streamlit
-pandas
-numpy
-scikit-learn
-pyarrow
-joblib
+streamlit>=1.33
+pandas>=2.1
+numpy>=1.24
+scikit-learn>=1.3
+joblib>=1.3
+pyarrow>=12
